# GameOfLife

./: .gitignore  CMakeLists.txt  CMakePresets.json  GameOfLife.sln  GameOfLife.vcxproj  GameOfLife.vcxproj.filters  README.md  imgui.ini  notes.txt
bin-int/x64-Debug/: GameOfLife.exe.recipe  GameOfLife.vcxproj.FileListAbsolute.txt  vc143.idb
bin-int/x64-Debug/GameOfLife.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GameOfLife.lastbuildstate  GameOfLife.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/x64-Release/: GameOfLife.exe.recipe
bin-int/x64-Release/GameOfLife.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GameOfLife.lastbuildstate  GameOfLife.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/x64-Static/: GameOfLife.exe.recipe
bin-int/x64-Static/GameOfLife.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GameOfLife.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
dep/: threadpool.h
dep/OpenGL/: error.h  ibo.cpp  ibo.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  vbl.cpp  vbl.h  vbo.cpp  vbo.h
src/: Application.cpp  Application.h  ArrayApp.cpp  ArrayApp.h  BasicGPU.cu  BasicGPU.cuh  GameOfLife.cpp  GameOfLife.h  GameOfLife.shader  ParallelCPU.h  SerialCPU.h  main.cpp  main.cu
